site title changed

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name - Software Engineer</title>
+    <title>Abhay Joshi - Software Engineer</title>
 </head>
 <body>
     <div class="container">
@@ -99,7 +99,7 @@
             <h1>Abhay Joshi</h1>
             <!-- <p class="tagline">Software Engineer | Problem Solver | Tech Enthusiast |    jabhay2012@gmail.com</p> -->
             <div class="tagline">
-                <div class="tagline-main">Software Engineer | Problem Solver | Tech Enthusiast</div>
+                <div class="tagline-main">Software Engineer | Problem Solver | AI Enthusiast</div>
                 <div class="tagline-links">
                     <a href="mailto:jabhay2012@gmail.com" class="tagline-link">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
